--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "deploy" : "npm run build&&gh-pages -d build"
+    "eject": "react-scripts eject"
   },
-  "homepage": "https://codekendo.github.io/ud-react-proj1"
+  "homepage": "."
 }
