--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "dependencies": {
-    "escape-string-regexp": "^1.0.5",
-    "prop-types": "^15.5.8",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-router-dom": "^4.1.1"
+    "prop-types": "15.5.8",
+    "react": "15.5.4",
+    "react-dom": "15.5.4",
+    "react-router-dom": "4.1.1"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
